Se agregaron endpoints para crear y obtener y borrar admins (sin autentificacion por tokens por ahora)
Se agregaron las funciones para esos endpoints en la capa de servicio y repositorio.

Se creo un archivo de structs para que todas las capas puedan usar el struct de admin.

Se hizo un test de guardar un admin (Todavia no hice el setup de git pa que corra las cosas local, ups)

Listo para mergear (sacando el workflow que lo ahgo mas tarde).
