# structs/structs.go
@@ -1,0 +1,6 @@
+package structs
+
+type AdminStruct struct {
+	Email    string
+	Password string
+}
